--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Hello World</h1>
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>Nelson Lopez's CV</title>
+  </head>
+  <body>
+    <p>Welcome to my Site!</p>
+  </body>
+</html>
