Adding new content to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <title>Nelson Lopez's CV</title>
   </head>
   <body>
-    <p>Welcome to my Site!</p>
+    <section class="hero">
+      <div class="hero-body">
+        <div class="container">
+          <h1 class="title">
+            Nelson Lopez
+          </h1>
+          <h2 class="subtitle">
+            Curriculum Vitae, Resume, and Projects
+          </h2>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
