--- a/index.html
+++ b/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE HTML>
 <html>
+
   <head>
-    <title>Nelson Lopez's CV</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Nelson Lopez</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
   </head>
+
   <body>
-    <section class="hero">
+    <section class="hero is-info is-fullheight is-medium is-bold">
       <div class="hero-body">
         <div class="container">
-          <h1 class="title">
-            Nelson Lopez
-          </h1>
-          <h2 class="subtitle">
-            Curriculum Vitae, Resume, and Projects
-          </h2>
+          <div class="box">
+            <h1 class="title has-text-black">
+              <strong>Nelson Lopez</strong>
+            </h1>
+            <h2 class="subtitle has-text-dark">
+              Resume, and Projects, and more!
+            </h2>
+          </div>
         </div>
       </div>
+      <nav class="navbar is-fixed-top" role="navigation" aria-label="dropdown navigation">
+        <a class="navbar-item">
+          About Me
+        </a>
+        <a class="navbar-item">
+          Resume
+        </a>
+        <a class="navbar-item">
+          Web Dev Projects
+        </a>
+      </nav>
     </section>
   </body>
+
 </html>
