--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         </div>
       </div>
       <nav class="navbar is-fixed-top" role="navigation" aria-label="dropdown navigation">
-        <a class="navbar-item">
+        <a class="navbar-item" href="./about.html">
           About Me
         </a>
-        <a class="navbar-item">
+        <a class="navbar-item" href="./resume.html">
           Resume
         </a>
-        <a class="navbar-item">
+        <a class="navbar-item" href="./projects.html">
           Web Dev Projects
         </a>
       </nav>
