--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="hero is-info is-fullheight is-medium is-bold">
       <div class="hero-body">
         <div class="container">
-          <div class="box">
+          <div class="box has-text-centered">
             <h1 class="title has-text-black">
               <strong>Nelson Lopez</strong>
             </h1>
