--- a/resume.html
+++ b/resume.html
@@ -1,11 +1,43 @@
 <!DOCTYPE HTML>
 <html>
+
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Resume</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     </head>
+
     <body>
+
+
+        <section class="hero is-link is-fullheight is-medium is-bold">
+
+
+            <div class="hero-body">
+                <div class="container">
+                    <div class="box has-text-centered">
+                        <h1 class="title has-text-black">
+                            <strong>Resume</strong>
+                        </h1>
+                        <h2 class="subtitle has-text-dark">
+                            Updated as of 11/06/2020
+                        </h2>
+
+                        <nav class="navbar is-fixed-top" role="navigation" aria-label="dropdown navigation">
+                            <a class="navbar-item" href="./index.html">
+                              Back
+                            </a>
+
+                    </div>
+
+                    <div class="box">
+                        <iframe src="./resumeNelsonLopez.pdf#toolbar=0" width="100%" height="1000px">
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
+
 </html>
