Work on Projects and About

--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
                             <a class="navbar-item" href="./index.html">
                               Back
                             </a>
-
+                        </nav>
                     </div>
 
                     <div class="box">
