--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
     <body>
 
 
-        <section class="hero is-link is-fullheight is-medium is-bold">
+        <section class="hero is-light is-fullheight is-medium is-bold">
 
 
             <div class="hero-body">
@@ -23,6 +23,10 @@
                         <h2 class="subtitle has-text-dark">
                             Updated as of 11/06/2020
                         </h2>
+
+                        <div class="notification is-danger">
+                            Please do not post my identifying information on the internet without my permission!
+                          </div>
 
                         <nav class="navbar is-fixed-top" role="navigation" aria-label="dropdown navigation">
                             <a class="navbar-item" href="./index.html">
