Changing navbar spacing

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
             </div>
             </div>
-            <nav class="navbar is-fixed-top" role="navigation" aria-label="dropdown navigation">
+            <nav class="navbar is-spaced is-fixed-top" role="navigation" aria-label="dropdown navigation">
                 <a class="navbar-item" href="./index.html">
                     Back
                 </a>
