--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
           </div>
         </div>
       </div>
-      <nav class="navbar is-fixed-top" role="navigation" aria-label="dropdown navigation">
-        <a class="navbar-item" href="./about.html">
-          About Me
-        </a>
-        <a class="navbar-item" href="./resume.html">
-          Resume
-        </a>
-        <a class="navbar-item" href="./projects.html">
-          Web Dev Projects
-        </a>
+      <nav class="navbar is-spaced is-fixed-top" role="navigation" aria-label="dropdown navigation">
+
+
+          <a class="navbar-item" href="./about.html">
+            About Me
+          </a>
+          <a class="navbar-item" href="./resume.html">
+            Resume
+          </a>
+          <a class="navbar-item" href="./projects.html">
+            Web Dev Projects
+          </a>
+        </div>
       </nav>
     </section>
   </body>
