--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
                             Please do not post my identifying information on the internet without my permission!
                           </div>
 
-                        <nav class="navbar is-fixed-top" role="navigation" aria-label="dropdown navigation">
+                        <nav class="navbar is-spaced is-fixed-top" role="navigation" aria-label="dropdown navigation">
                             <a class="navbar-item" href="./index.html">
                               Back
                             </a>
