adding ramquest to projects

--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,9 @@
     </head>
 
     <body>
-        
+        <a class="navbar-item" href="./ramquest.html">
+            ramquest
+          </a>
 
     </body>
 
