--- a/projects.html
+++ b/projects.html
@@ -9,9 +9,31 @@
     </head>
 
     <body>
-        <a class="navbar-item" href="./ramquest.html">
-            ramquest
-          </a>
+          <section class="hero is-link is-fullheight is-medium is-bold">
+            <div class="hero-body">
+                <div class="container">
+                    <div class="notification is-warning">
+                        New Github Repos and Projects are being completed all the time, so check back often to see the
+                        latest!
+                    </div>
+            
+                    <div class="box">
+                        <h1 class="title has-text-black">Comp 426 Projects</h1>
+                        <h1 class="subtitle has-text-grey">Web Development</h1>
+                        <button class="button is-link">2048</button>
+                        <button class="button is-info">KMP's Spicy 9 Adventure</button>
+                        <form action="./ramquest/ramquest.html">
+                            <button class="button is-link" type="submit">Rameses's Quest</button>
+                         </form>
+                    </div>
+                </div>
+                <nav class="navbar is-spaced is-fixed-top" role="navigation" aria-label="dropdown navigation">
+                    <a class="navbar-item" href="./index.html">
+                        Back
+                    </a>
+                </nav>
+            </section>
+
 
     </body>
 
