--- a/ramquest/ramquest.html
+++ b/ramquest/ramquest.html
@@ -53,7 +53,11 @@ canvas{
 </head>
 
 <body bgcolor=#303030>
-
+	<nav class="navbar is-spaced is-fixed-top" role="navigation" aria-label="dropdown navigation">
+                            <a class="navbar-item" href="../projects.html">
+                              Back
+                            </a>
+                        </nav>
 	<br><br><br>
 
 	<center><div style="width:512px;">
