--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
 <html>
-
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,14 +8,13 @@
     </head>
 
     <body>
-          <section class="hero is-link is-fullheight is-medium is-bold">
+        <section class="hero is-link is-fullheight is-medium is-bold">
             <div class="hero-body">
                 <div class="container">
                     <div class="notification is-warning">
                         New Github Repos and Projects are being completed all the time, so check back often to see the
                         latest!
-                    </div>
-            
+                 </div>
                     <div class="box">
                         <h1 class="title has-text-black">Comp 426 Projects</h1>
                         <h1 class="subtitle has-text-grey">Web Development</h1>
@@ -24,17 +22,17 @@
                         <button class="button is-info">KMP's Spicy 9 Adventure</button>
                         <form action="./ramquest/ramquest.html">
                             <button class="button is-link" type="submit">Rameses's Quest</button>
-                         </form>
+                        </form>
+                        <form action="https://scambusters-47d4a.web.app">
+                            <button class="button is-link" type="submit">Scambusters: The Video Game</button>
+                        </form>
                     </div>
                 </div>
                 <nav class="navbar is-spaced is-fixed-top" role="navigation" aria-label="dropdown navigation">
                     <a class="navbar-item" href="./index.html">
                         Back
-                    </a>
+                 </a>
                 </nav>
-            </section>
-
-
+         </section>
     </body>
-
 </html>
