Updated and changed ramquest look

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
             </div>
             <nav class="navbar is-spaced is-fixed-top" role="navigation" aria-label="dropdown navigation">
                 <a class="navbar-item" href="./index.html">
-                    Back
+                    Back to Main
                 </a>
             </nav>
         </section>
