--- a/ramquest/ramquest.html
+++ b/ramquest/ramquest.html
@@ -4,6 +4,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>PICO-8 Cartridge</title>
         <meta name="description" content="">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+
 
 <STYLE TYPE="text/css">
 <!--
@@ -54,13 +56,14 @@ canvas{
 
 <body>
     <link rel="stylesheet" href="./ramquest.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
                             <a class="navbar-item" href="../projects.html">
                               Back
                             </a>
 	<br><br><br><br><br><br><br><br>
 
-	<center><div style="width:512px;">
+	<center>
+		<h1><strong>Rameses's Quest</strong></h1>
+		<div style="width:512px;">
 
 	<canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
 
