Added Element Game

--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,25 +15,38 @@
                     <div class="notification is-warning">
                         New Github Repos and Projects are being completed all the time, so check back often to see the
                         latest!
-                 </div>
+                    </div>
+                    <div class="box">
+                        <h1 class="title has-text-black">Legend</h1>
+                        <h1 class="subtitle has-text-grey">What the colors means</h1>
+                        <button class="button is-link">These buttons stay on my site</button>
+                        <button class="button is-info">These buttons go to other sites on the Internet</button>
+                    </div>
                     <div class="box">
                         <h1 class="title has-text-black">Comp 426 Projects</h1>
                         <h1 class="subtitle has-text-grey">Web Development</h1>
                         <button class="button is-link">2048</button>
-                        <button class="button is-info">KMP's Spicy 9 Adventure</button>
-                        <form action="./ramquest/ramquest.html">
-                            <button class="button is-link" type="submit">Rameses's Quest</button>
-                        </form>
-                        <form action="https://scambusters-47d4a.web.app">
-                            <button class="button is-link" type="submit">Scambusters: The Video Game</button>
-                        </form>
+                        <button class="button is-info"
+                        onclick="location.href='https://kmps-spicy-9-adventure.herokuapp.com/'">Spicy 9</button>
+                    </div>
+                    <div class="box">
+                        <h1 class="title has-text-black">Game Jams and Hackathons</h1>
+                        <h1 class="subtitle has-text-grey">Web Development</h1>
+                        <button class="button is-link" onclick="location.href='ramquest/ramquest.html'">Rameses's
+                            Quest</button>
+
+                        <button class="button is-link" onclick="location.href='/element/index.html'">Element</button>
+                        <button class="button is-info"
+                        onclick="location.href='https://scambusters-47d4a.web.app'">Scambusters: The Video
+                        Game</button>
                     </div>
                 </div>
                 <nav class="navbar is-spaced is-fixed-top" role="navigation" aria-label="dropdown navigation">
                     <a class="navbar-item" href="./index.html">
                         Back
-                 </a>
+                    </a>
                 </nav>
-         </section>
+        </section>
     </body>
+
 </html>
