Added 2048 to Personal Site

--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
                     <div class="box">
                         <h1 class="title has-text-black">Comp 426 Projects</h1>
                         <h1 class="subtitle has-text-grey">Web Development</h1>
-                        <button class="button is-link">2048</button>
+                        <button class="button is-link" onclick="location.href='./2048/index.html'">2048</button>
                         <button class="button is-info"
                         onclick="location.href='https://kmps-spicy-9-adventure.herokuapp.com/'">Spicy 9</button>
                     </div>
