--- a/ramquest/ramquest.html
+++ b/ramquest/ramquest.html
@@ -63,6 +63,9 @@ canvas{
 
 	<center>
 		<h1><strong>Rameses's Quest</strong></h1>
+		<p>WASD to move around!</p>
+		<p>Get to each Finish Line while avoid the Red <strong style="color: red;">X</strong> Return Spaces</p>
+		<p>Try to complete each level with as much time and score as you can!</p>
 		<div style="width:512px;">
 
 	<canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
@@ -140,7 +143,11 @@ canvas{
     </div>
 	<br>	
 
-	</div></center>
+	</div>
+	<br>
+	<p><strong>Hint</strong>: On some levels, get speedups, but on others, go for time bounses. There's an optimal route each level</p>
+
+	</center>
 	<br><br>
 
 </body></html>
