--- a/about.html
+++ b/about.html
@@ -31,11 +31,11 @@
                             </div>
                             <div class="box">
                             <ul><strong>Some Fun Facts:</strong></ul>
-                            <li>I was the Club President of Carolina Esports from 2020 to 2021</li>
+                            <li>I am the Club President of Carolina Esports from 2020 to 2021</li>
                             <li>I've particpated in multiple Game Jams, Hackathons, and experiences similar to that! I've placed high in some of those events too!</li>
                             <li>I've had a tad of a speech issue in that I studder my words sometimes. Don't worry, some other folks have had that issue too and they've turned out fine!</li>
                             <li>I've built my own PC before! It's a AMD Ryzen 5 3600 with an Nvidia RTX 2070 Super along with 16GB of RAM on an X570 Board</li>
-                            <li>I've been two of the world's hemispheres before, the Western and the Eastern ones!</li>
+                            <li>I've been to two of the world's hemispheres before, the Western and the Eastern ones!</li>
                             <li>In High School, I was really involved with my school's JROTC Unit. It really helped make me who I am today!</li>
                         </div>
                         </p>
