--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
           <a class="navbar-item" href="./projects.html">
             Web Dev Projects
           </a>
+          <a class="navbar-item" href="https://github.com/NelsonL19/">
+            Github
+          </a>
         </div>
       </nav>
     </section>
