Updating projects page

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
                         <button class="button is-info">These buttons go to other sites on the Internet</button>
                     </div>
                     <div class="box">
-                        <h1 class="title has-text-black">Comp 426 Projects</h1>
+                        <h1 class="title has-text-black">University Projects</h1>
                         <h1 class="subtitle has-text-grey">Web Development</h1>
                         <button class="button is-link" onclick="location.href='./2048/index.html'">2048</button>
                         <button class="button is-info"
@@ -31,7 +31,7 @@
                     </div>
                     <div class="box">
                         <h1 class="title has-text-black">Game Jams and Hackathons</h1>
-                        <h1 class="subtitle has-text-grey">Web Development</h1>
+                        <h1 class="subtitle has-text-grey">Personal Projects</h1>
                         <button class="button is-link" onclick="location.href='ramquest/ramquest.html'">Rameses's
                             Quest</button>
 
