--- a/about.html
+++ b/about.html
@@ -24,17 +24,17 @@
                     </div>
                     <div class="box has-text-centered">
                         <p>
-                            Hey Everyone! My name is <strong>Nelson Lopez</strong>, and welcome to my website! I'm 22 Years Old, and a Computer Science major at the University
-                            of North Carolina at Chapel Hill <em>(Go Heels!)</em>. I was born in New York, and moved to North Carolina for my secondary and post-secondary education.
+                            Hey Everyone! My name is <strong>Nelson Lopez</strong>, and welcome to my website! I'm 24 Years Old, and have a B.S. in Computer Science major from the University
+                            of North Carolina at Chapel Hill <em>(Go Heels!)</em>. I was born in New York, and moved to North Carolina.
                             Some of my hobbies are game design, watching and playing esport games, driving, and helping other people! I've even been featured in some areas 
                             online relating to those hobbies, so yeah, maybe you'll come across a few articles about me!
                             </div>
                             <div class="box">
                             <ul><strong>Some Fun Facts:</strong></ul>
-                            <li>I am the Club President of Carolina Esports from 2020 to 2021</li>
+                            <li>I was the Club President of Carolina Esports from 2020 to 2021</li>
                             <li>I've particpated in multiple Game Jams, Hackathons, and experiences similar to that! I've placed high in some of those events too!</li>
                             <li>I've had a tad of a speech issue in that I studder my words sometimes. Don't worry, some other folks have had that issue too and they've turned out fine!</li>
-                            <li>I've built my own PC before! It's a AMD Ryzen 5 3600 with an Nvidia RTX 2070 Super along with 16GB of RAM on an X570 Board</li>
+                            <li>I've built my own PC before! It's currently a AMD Ryzen 5 5700X with an Nvidia RTX 2070 Super along with 32GB of RAM on an X570 Board</li>
                             <li>I've been to two of the world's hemispheres before, the Western and the Eastern ones!</li>
                             <li>In High School, I was really involved with my school's JROTC Unit. It really helped make me who I am today!</li>
                         </div>
@@ -47,6 +47,9 @@
             <nav class="navbar is-spaced is-fixed-top" role="navigation" aria-label="dropdown navigation">
                 <a class="navbar-item" href="./index.html">
                     Back to Main
+                </a>
+                <a class="navbar-item" href="https://mastodon.coffee/@mirai">
+                    Mastodon Account
                 </a>
             </nav>
         </section>
