--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                 <a class="navbar-item" href="./index.html">
                     Back to Main
                 </a>
-                <a class="navbar-item" href="https://mastodon.coffee/@mirai">
+                <a rel="me" class="navbar-item" href="https://mastodon.coffee/@mirai">
                     Mastodon Account
                 </a>
             </nav>
