--- a/about.html
+++ b/about.html
@@ -8,7 +8,6 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
-
     <body>
         <section class="hero is-primary is-fullheight is-medium is-bold">
             <div class="hero-body">
@@ -24,7 +23,7 @@
                     </div>
                     <div class="box has-text-centered">
                         <p>
-                            Hey Everyone! My name is <strong>Nelson Lopez</strong>, and welcome to my website! I'm 24 Years Old, and have a B.S. in Computer Science major from the University
+                            Hey Everyone! My name is <strong>Nelson Lopez</strong>, and welcome to my website! I'm 24 Years Old, and have a B.S. in Computer Science from the University
                             of North Carolina at Chapel Hill <em>(Go Heels!)</em>. I was born in New York, and moved to North Carolina.
                             Some of my hobbies are game design, watching and playing esport games, driving, and helping other people! I've even been featured in some areas 
                             online relating to those hobbies, so yeah, maybe you'll come across a few articles about me!
