--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             Resume
           </a>
           <a class="navbar-item" href="./projects.html">
-            Web Dev Projects
+            Projects
           </a>
           <a class="navbar-item" href="https://github.com/NelsonL19/">
             Github
