--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,21 @@
                         <button class="button is-info">These buttons go to other sites on the Internet</button>
                     </div>
                     <div class="box">
+                        <h1 class="title has-text-black">Hurricane Games</h1>
+                        <h1 class="subtitle has-text-grey">Indie Game Development Label</h1>
+                        <div class="notification is-warning">
+                            Currently developing multiple projects that will be announced soon!
+                        </div>
+                        </div>
+                    <div class="box">
+                        <h1 class="title has-text-black">Game Jams and Hackathons</h1>
+                        <h1 class="subtitle has-text-grey">Personal Projects</h1>
+                        <button class="button is-link" onclick="location.href='ramquest/ramquest.html'">Rameses's
+                            Quest</button>
+
+                        <button class="button is-link" onclick="location.href='/element/index.html'">Element</button>
+                    </div>
+                    <div class="box">
                         <h1 class="title has-text-black">University Projects</h1>
                         <h1 class="subtitle has-text-grey">Web Development</h1>
                         <button class="button is-link" onclick="location.href='./2048/index.html'">2048</button>
@@ -29,14 +44,6 @@
                         <button class="button is-info"
                         onclick="location.href='https://scambusters-47d4a.web.app'">Scambusters: The Video
                         Game</button>
-                    </div>
-                    <div class="box">
-                        <h1 class="title has-text-black">Game Jams and Hackathons</h1>
-                        <h1 class="subtitle has-text-grey">Personal Projects</h1>
-                        <button class="button is-link" onclick="location.href='ramquest/ramquest.html'">Rameses's
-                            Quest</button>
-
-                        <button class="button is-link" onclick="location.href='/element/index.html'">Element</button>
                     </div>
                 </div>
                 <nav class="navbar is-spaced is-fixed-top" role="navigation" aria-label="dropdown navigation">
